--- a/EscapeTheUnderground/EscapeTheUnderground/MainWindow.xaml
+++ b/EscapeTheUnderground/EscapeTheUnderground/MainWindow.xaml
@@ -1,21 +1,24 @@
-﻿d<Window x:Class="EscapeTheUnderground.MainWindow"
+﻿<Window x:Name="undergroundGame" x:Class="EscapeTheUnderground.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:EscapeTheUnderground"
         mc:Ignorable="d"
-        Title="MainWindow" Height="600" Width="1280">
+        Title="MainWindow" Height="600" Width="1280" KeyDown="undergroundGame_KeyDown">
     <Canvas x:Name="LayoutRoot">
         <Image x:Name="Background" Panel.ZIndex="-2" Height="{Binding Path=ActualHeight, ElementName=LayoutRoot}" Stretch="Uniform" Width="{Binding Path=ActualWidth, ElementName=LayoutRoot}"/>
-        <Image Tag="projectile" x:Name="Player" Height="100" Width="135" Canvas.Left="79" Canvas.Top="202"></Image>
+        <Image x:Name="Player" Height="100" Width="135" Canvas.Left="79" Canvas.Top="202" KeyDown="Player_KeyDown"></Image>
         <Label x:Name="Ypos" Content="Label" Canvas.Left="1097" Canvas.Top="10"/>
         <Label x:Name="Xpos" Content="Label" Canvas.Left="1192" Canvas.Top="17"/>
         <Rectangle x:Name="colBlock" Fill="#FFE00D0D" Height="100" Canvas.Left="-578" Stroke="Black" Canvas.Top="227" Width="441"/>
-        <Label Tag="projectile" x:Name="blockPos" Content="Skóre: 0" Canvas.Left="10" Canvas.Top="6" FontSize="20" FontWeight="Bold" Foreground="White"/>
+        <Label x:Name="score_label" Content="Skóre: 0" Canvas.Left="10" Canvas.Top="6" FontSize="20" FontWeight="Bold" Foreground="White"/>
         <Label x:Name="ammo_label" Content="Náboje: 20" Canvas.Left="115" Canvas.Top="6" FontSize="20" FontWeight="Bold" Foreground="White"/>
         <Label x:Name="HP" Content="HP: " Canvas.Left="234" Canvas.Top="6" FontSize="20" FontWeight="Bold" Foreground="White"/>
         <ProgressBar x:Name="health_bar" Height="25" Canvas.Left="295" Canvas.Top="11" Width="133"/>
-        <Image x:Name="BULLLLLLLLLLLLLLLLLLLET" Tag="projectile"></Image>
+        <Image x:Name="BULLLLLLLLLLLLLLLLLLLET"></Image>
+        <Rectangle Panel.ZIndex="998" x:Name="Paused" Fill="#FFE00D0D" Height="569" Stroke="Black" Width="1272" Visibility="Hidden"/>
+        <Label Panel.ZIndex="999" x:Name="InfoLabel" Content="You died" Canvas.Left="592" Canvas.Top="276" Visibility="Hidden"/>
+
     </Canvas>
 </Window>
